--- a/runtime/pom.xml
+++ b/runtime/pom.xml
@@ -38,6 +38,10 @@
       <groupId>org.apache.poi</groupId>
       <artifactId>poi-ooxml-full</artifactId>
     </dependency>
+    <dependency>
+      <groupId>org.apache.poi</groupId>
+      <artifactId>poi-scratchpad</artifactId>
+    </dependency>
   </dependencies>
   <build>
     <plugins>
