Disable native build in Windows
Until the AWT support is working again

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -51,3 +51,4 @@ jobs:
 
       - name: Build with Maven (Native)
         run: mvn -B verify -Dnative "-Dnative.surefire.skip"
+        if: not startsWith(matrix.os, 'windows')
