--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -55,4 +55,5 @@ jobs:
 
       - name: Build with Maven (Native)
         run: mvn -B verify -Dnative "-Dnative.surefire.skip"
-        if: ${{ startsWith(matrix.os, 'windows') == false}}
+        #if: ${{ startsWith(matrix.os, 'windows') == false}}
+        shell: bash
