--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -52,7 +52,8 @@ jobs:
           
       - name: Build with Maven
         run: mvn -B clean verify -Dno-format
-
+        shell: bash
       - name: Build with Maven (Native)
-        run: mvn -B verify -Dnative "-Dnative.surefire.skip"
+        run: mvn -B verify -Dnative -Dnative.surefire.skip
         if: ${{ startsWith(matrix.os, 'windows') == false}}
+        shell: bash
