--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -22,6 +22,10 @@ on:
       - '*.txt'
       - '.all-contributorsrc'
 
+defaults:
+  run:
+    shell: bash
+    
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
   cancel-in-progress: true
@@ -52,8 +56,7 @@ jobs:
           
       - name: Build with Maven
         run: mvn -B clean verify -Dno-format
-        shell: bash
+
       - name: Build with Maven (Native)
         run: mvn -B verify -Dnative -Dnative.surefire.skip
         if: ${{ startsWith(matrix.os, 'windows') == false}}
-        shell: bash
