--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
   </parent>
   <groupId>io.quarkiverse.poi</groupId>
   <artifactId>quarkus-poi-parent</artifactId>
-  <version>999-SNAPSHOT</version>
+  <version>1.0.1</version>
   <packaging>pom</packaging>
   <name>Quarkus POI - Parent</name>
   <modules>
@@ -89,4 +89,8 @@
       </modules>
     </profile>
   </profiles>
+
+  <scm>
+    <tag>1.0.1</tag>
+  </scm>
 </project>
