--- a/runtime/src/main/resources/META-INF/quarkus-extension.yaml
+++ b/runtime/src/main/resources/META-INF/quarkus-extension.yaml
@@ -13,7 +13,7 @@ metadata:
     - presentation
     - document
     - writer
-  guide: https://quarkiverse.github.io/quarkiverse-docs/quarkus-poi/dev/
+  guide: https://quarkiverse.github.io/quarkiverse-docs/quarkus-poi/1.x/
   categories:
     - "miscellaneous"
   status: "preview"
