--- a/pom.xml
+++ b/pom.xml
@@ -17,7 +17,7 @@
     <module>docs</module>
   </modules>
   <scm>
-    <connection>:git:git@github.com:quarkiverse/quarkus-poi.git</connection>
+    <connection>scm:git:git@github.com:quarkiverse/quarkus-poi.git</connection>
     <developerConnection>scm:git:git@github.com:quarkiverse/quarkus-poi.git</developerConnection>
     <url>https://github.com/quarkiverse/quarkus-poi</url>
   </scm>
