--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,7 @@
   <properties>
     <quarkus.version>3.3.3</quarkus.version>
     <poi.version>5.2.5</poi.version>
+    <compress.version>1.25.0</compress.version>
   </properties>
   <dependencyManagement>
     <dependencies>
@@ -54,6 +55,11 @@
         <groupId>org.apache.poi</groupId>
         <artifactId>poi-scratchpad</artifactId>
         <version>${poi.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.apache.commons</groupId>
+        <artifactId>commons-compress</artifactId>
+        <version>${compress.version}</version>
       </dependency>
     </dependencies>
   </dependencyManagement>
