--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,7 @@
   <properties>
     <quarkus.version>3.3.3</quarkus.version>
     <poi.version>5.2.5</poi.version>
+    <!-- Compress version must override Quarkus and match POI version -->
     <compress.version>1.25.0</compress.version>
   </properties>
   <dependencyManagement>
