--- a/runtime/pom.xml
+++ b/runtime/pom.xml
@@ -42,6 +42,10 @@
       <artifactId>poi-scratchpad</artifactId>
     </dependency>
     <dependency>
+      <groupId>org.jboss.logmanager</groupId>
+      <artifactId>log4j2-jboss-logmanager</artifactId>
+    </dependency>
+    <dependency>
       <groupId>org.graalvm.sdk</groupId>
       <artifactId>graal-sdk</artifactId>
       <scope>provided</scope>
