--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -47,12 +47,11 @@ jobs:
 
       - uses: actions/checkout@v3
 
-      - name: Set up JDK 11
+      - name: Set up JDK 17
         uses: graalvm/setup-graalvm@v1
         with:
-          version: '22.3.0'
-          java-version: '11'
-          components: 'native-image'
+          distribution: 'graalvm'
+          java-version: '17'
           github-token: ${{ secrets.GITHUB_TOKEN }}
           cache: 'maven'
           
