--- a/pom.xml
+++ b/pom.xml
@@ -23,7 +23,7 @@
     <tag>HEAD</tag>
   </scm>
   <properties>
-    <quarkus.version>3.8.4</quarkus.version>
+    <quarkus.version>3.14.2</quarkus.version>
     <poi.version>5.3.0</poi.version>
     <!-- Commons IO version must override Quarkus and match POI version -->
     <commons-io.version>2.16.1</commons-io.version>
@@ -70,6 +70,11 @@
         <plugin>
           <groupId>io.quarkus</groupId>
           <artifactId>quarkus-maven-plugin</artifactId>
+          <version>${quarkus.version}</version>
+        </plugin>
+        <plugin>
+          <groupId>io.quarkus</groupId>
+          <artifactId>quarkus-config-doc-maven-plugin</artifactId>
           <version>${quarkus.version}</version>
         </plugin>
       </plugins>
