UberJar support and updated README.MD

--- a/runtime/src/main/resources/META-INF/quarkus-extension.yaml
+++ b/runtime/src/main/resources/META-INF/quarkus-extension.yaml
@@ -14,7 +14,7 @@ metadata:
     - document
     - writer
   guide: "https://quarkiverse.github.io/quarkiverse-docs/quarkus-poi/dev/"
-  icon-url: "https://poi.apache.org/images/poweredby-poi-logo.png"
+  icon-url: "https://raw.githubusercontent.com/quarkiverse/quarkus-poi/main/docs/modules/ROOT/assets/images/poi.svg"
   categories:
     - "miscellaneous"
   status: "stable"
