--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,9 @@
     <poi.version>5.4.1</poi.version>
     <!-- Commons IO version must override Quarkus and match POI version -->
     <commons-io.version>2.20.0</commons-io.version>
+    <!-- These should match the POI version -->
+    <zstd.version>1.5.7-4</zstd.version>
+    <xz.version>1.10</xz.version>
   </properties>
   <dependencyManagement>
     <dependencies>
@@ -60,6 +63,16 @@
         <groupId>commons-io</groupId>
         <artifactId>commons-io</artifactId>
         <version>${commons-io.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>com.github.luben</groupId>
+        <artifactId>zstd-jni</artifactId>
+        <version>${zstd.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.tukaani</groupId>
+        <artifactId>xz</artifactId>
+        <version>${xz.version}</version>
       </dependency>
     </dependencies>
   </dependencyManagement>
