--- a/runtime/pom.xml
+++ b/runtime/pom.xml
@@ -46,6 +46,14 @@
       <artifactId>log4j2-jboss-logmanager</artifactId>
     </dependency>
     <dependency>
+      <groupId>com.github.luben</groupId>
+      <artifactId>zstd-jni</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.tukaani</groupId>
+      <artifactId>xz</artifactId>
+    </dependency>
+    <dependency>
       <groupId>org.graalvm.sdk</groupId>
       <artifactId>nativeimage</artifactId>
       <scope>provided</scope>
